2/11/16 - 0.6.1 - Changelog added. Version information will be added here. Added a ability to manage sonarr from the channel.