@@ -1,1 +1,2 @@
+2/12/16 - 0.8.2 - Added ability to view changelog in the Plex Channel. Find under 'Manage Channel'.
 2/11/16 - 0.6.1 - Changelog added. Version information will be added here. Added a ability to manage sonarr from the channel.
